// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavItem /> should render correctly 1`] = `
<div>
  <button
    class="slideout-modal--nav-item"
    type="button"
  >
    <span
      class="slideout-modal--nav-item-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`<NavItem /> should render correctly with selected 1`] = `
<div>
  <button
    class="slideout-modal--nav-item"
    type="button"
  >
    <span
      class="slideout-modal--nav-item-label"
    >
      Label
    </span>
    <span
      class="slideout-modal--nav-item-selected"
    >
      One, Two, Three
    </span>
  </button>
</div>
`;
